Add blue color styling for MeghTree Technologies site name

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4174,6 +4174,10 @@ section,
 /*--------------------------------------------------------------
 # Starter Section Section
 --------------------------------------------------------------*/
+.sitename {
+  color: #0078D7;
+}
+
 .starter-section {
   /* Add your styles here */
 }
